apps/finpay-api/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finpay-api
  namespace: finpay
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /api/v1/health
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: finpay-api
                port:
                  name: http
          - path: /api/v1/accounts
            pathType: Prefix
            backend:
              service:
                name: finpay-api
                port:
                  name: http
          - path: /api/v1/transactions
            pathType: Prefix
            backend:
              service:
                name: finpay-api
                port:
                  name: http
          - path: /api/v1/health
            pathType: Prefix
            backend:
              service:
                name: finpay-api
                port:
                  name: http
